# simple_interpreter

./: CMakeLists.txt  README.md  basictype.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  nodevisitor.cpp  nodevisitor.h  parser.cpp  parser.h  part6.py  token-type.h  token.cpp  token.h
Ast/: assign.cpp  assign.h  ast.h  binop.cpp  binop.h  block.cpp  block.h  compound.cpp  compound.h  doloop.cpp  doloop.h  ifcondition.cpp  ifcondition.h  literal.cpp  literal.h  noop.cpp  noop.h  num.cpp  num.h  print.cpp  print.h  program.cpp  program.h  toint.cpp  toint.h  tostring.cpp  tostring.h  type.cpp  type.h  unaryop.cpp  unaryop.h  var.cpp  var.h  vardecl.cpp  vardecl.h
Exception/: interpreterexception.cpp  lexerexception.cpp  myexception.cpp  parserexception.cpp
include/: basictype.h  interpreter.h  lexer.h  nodevisitor.h  parser.h  token-type.h  token.h  variant.h
include/Ast/: assign.h  ast.h  binop.h  block.h  doloop.h  ifcondition.h  literal.h  noop.h  print.h  toint.h  tostring.h  type.h  unaryop.h  var.h  vardecl.h
include/DataType/: variant.h
include/Exception/: interpreterexception.h  lexerexception.h  myexception.h  parserexception.h
src/: basictype.cpp  interpreter.cpp  lexer.cpp  main.cpp  nodevisitor.cpp  parser.cpp  token.cpp
src/Ast/: assign.cpp  ast.cpp  binop.cpp  block.cpp  doloop.cpp  ifcondition.cpp  literal.cpp  noop.cpp  print.cpp  toint.cpp  tostring.cpp  type.cpp  unaryop.cpp  var.cpp  vardecl.cpp
src/DataType/: variant.cpp
src/Exception/: interpreterexception.cpp  lexerexception.cpp  myexception.cpp  parserexception.cpp
testData/: source.test
